--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "test:e2e": "jest --config ./apps/apigateway/test/jest-e2e.json"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.9.5",
+    "@grpc/proto-loader": "^0.7.10",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^10.2.7",
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "ts-proto": "^1.160.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
